// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders correctly 1`] = `
<div
  className="element-container css-0"
>
  <div
    className="select-box"
  >
    <select
      className="element"
      name="Select"
    >
      <option
        value=""
      />
    </select>
    <span
      className="after-form-element"
    />
  </div>
</div>
`;

exports[`Select renders required correctly 1`] = `
<div
  className="element-container css-0"
>
  <div
    className="select-box required"
  >
    <select
      className="element"
      name="Select"
      required={true}
    >
      <option
        value=""
      />
    </select>
    <span
      className="after-form-element"
    />
  </div>
</div>
`;
